--- a/css/global/header.css
+++ b/css/global/header.css
@@ -37,7 +37,8 @@
   display: block;
   transition: 0.3s;
 }
-.header-menu a:hover::after{
+.header-menu a:hover::after,
+.header-menu a.active::after{
   width: 100%;
 }
 /* MEDIA QUERIES */
